fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -7,26 +7,29 @@
     box-sizing: border-box;
 
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-html{
+
+html {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
+
 body {
     /* background: url(../img/components.png); */
-   
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    display:flex;
-    flex-direction:column;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   overflow-x: hidden;
-   overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow-x: hidden;
+    overflow-y: scroll;
     z-index: -1;
 }
 
@@ -44,57 +47,59 @@ body {
 }
 
 
-nav{
-    border:2px solid rgb(0, 0, 0);
-    
+nav {
+    border: 2px solid rgb(0, 0, 0);
+
 }
 
-.nav-container{
-    display:flex;
+.nav-container {
+    display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 
     margin-left: 1rem;
-    position:fixed;
+    position: fixed;
     height: 100%;
-    z-index:2;
+    z-index: 2;
 }
 
 /*
 Custom classes
 */
 
-.body-container{
-   
+.body-container {
+
     width: 90%;
-    
+
     margin: auto;
-   padding: 1rem;
-   overflow-x: hidden;
-   
+    padding: 1rem;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
 }
 
-.theme-container{
- 
+/* .body-container::-webkit-scrollbar{
+    display: none;
+} */
 
-    
-    
+.theme-container {
     border-radius: 20px;
-    width:100%;
+    width: 100%;
     background: rgba(36, 31, 60, 0.8);
     /* backdrop-filter: blur(2.5px); */
     box-shadow: 0px 4px 11px 6px rgba(0, 0, 0, 0.25);
     margin-bottom: 70px;
 }
 
-.container_heading{
+.container_heading {
     color: white;
     font-size: 3.1rem;
     padding-bottom: 1rem;
     text-align: center;
 }
-.sub-container{
+
+.sub-container {
     margin-top: 1rem;
     display: flex;
     justify-content: space-between;
@@ -109,7 +114,7 @@ Custom classes
 
 
 
-.margin-bottom{
+.margin-bottom {
     margin-bottom: 2rem;
 }
 
@@ -122,35 +127,40 @@ Custom classes
     margin-bottom: 100px;
 } */
 
-.highlight{
+.highlight {
     color: white;
     font-size: 1.3rem !important;
-  
-}
-
-.bg-orange{
-    background: linear-gradient(135deg,#eea849,#f46b45);
-}
-.bg-blue{
-    background: linear-gradient(135deg,#60b4ec,#0a76e2);
 
 }
+
+.bg-orange {
+    background: linear-gradient(135deg, #eea849, #f46b45);
+}
+
+.bg-blue {
+    background: linear-gradient(135deg, #60b4ec, #0a76e2);
+
+}
+
 @media screen and (max-width: 780px) {
-    body{
-        display:flex;
-        flex-direction:column;
+    body {
+        display: flex;
+        flex-direction: column;
     }
-    .sub-container{
+
+    .sub-container {
         justify-content: center;
     }
-    .nav-container{
-        display:none;
+
+    .nav-container {
+        display: none;
     }
-    .body-container{
-        width:95%;
+
+    .body-container {
+        width: 95%;
     }
-    
-     .highlight{
+
+    .highlight {
         font-weight: 400 !important;
     }
 }
